assets/less/app.less
/* ... */
   
   #bbpress-forums .bbp-meta .caret {
      margin: .5em;
   }

   #bbpress-forums span.bbp-admin-links {
      color: @text-color;
   }
   
   #bbpress-forums span.bbp-admin-links a {
      color: @text-muted;
      font-size: 10px;
      text-transform: uppercase;
      text-decoration: none;
   }

   .bbp-forum-header a.bbp-forum-permalink, 
   .bbp-topic-header a.bbp-topic-permalink, 
   .bbp-reply-header a.bbp-reply-permalink {
      color: @text-muted;
   }

   // Reply avatar and author info
   #bbpress-forums div.bbp-reply-author,
   #bbpress-forums .bbp-lead-topic div.bbp-topic-author,
   #bbp-search-results div.bbp-topic-author {
      
      border-radius: 3px;

      img.avatar {
         float: none !important;
         margin-bottom: 4px;
      }

      div.bbp-author-role {
         margin-bottom: 8px;
      }
      div.bbp-reply-ip,
      div.bbp-topic-ip {
         margin-top: -8px;
         margin-bottom: 8px;
      }
   }

   #bbpress-forums div.bbp-topic-content code, #bbpress-forums div.bbp-reply-content code, #bbpress-forums div.bbp-topic-content pre, #bbpress-forums div.bbp-reply-content pre {
      font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
      display: inline-block;
      background-color: @code-bg;
      border: 1px solid @border-color-main-contrast;
      padding: 0 5px;
      max-width: 95%;
      vertical-align: middle;
      margin-top: -3px;
   }

   #bbpress-forums .bbp-body div.bbp-forum-author, 
   #bbpress-forums .bbp-body div.bbp-topic-author, 
   #bbpress-forums .bbp-body div.bbp-reply-author {
      background-color: @body-bg-contrast-mix;
   }

   // Tag list
   #bbpress-forums div.bbp-topic-tags {
      float: none;
   }

   // REPLY FORM
      #bbpress-forums fieldset.bbp-form .checkbox input {
         margin: 0 0 0 -20px;
      }

      #insert-media-button {
         .btn;
         .btn-default;
         box-shadow: none;
         margin-bottom: 4px;
      }

      #bbpress-forums .quicktags-toolbar {
         background-color: @body-bg;
         border: none;

         input[type=button] {
            .btn;
            .btn-default;
         }
      }

   // reply Revision log
   .bbp-reply-revision-log .avatar {
      display: none;
   }

   // Images
   #bbpress-forums .bbp-body .bbp-topic-content img,
   #bbpress-forums .bbp-body .bbp-reply-content img {
      margin: .5em 1em;
   }

   // Trashed replies
   #bbpress-forums .status-trash.even, 
   #bbpress-forums .status-spam.even {
      background-color: @brand-danger-muted !important;
   }

   #bbpress-forums .status-trash.odd, 
   #bbpress-forums .status-spam.odd {
      background-color: darken(@brand-danger-muted, 5%) !important;
   }



// FRONT PAGE
   #bbpress-forums.srv-front-page div.bbp-topic-content {
      margin-left: 0;
      padding: 8px;
   }

   #bbpress-forums.srv-front-page div.bbp-frontpage-topic-footer {
      background-color: @body-bg-contrast-mix;
      padding: 8px 16px;

      .bbp-meta {
         font-size: @font-size-base;
      }
   }

   #bbpress-forums.srv-front-page li.bbp-body .topic {
      //background-color: @body-bg;
     // border-left: 15px ;

      background: @body-bg; /* Old browsers */
      background: -moz-linear-gradient(top,  @body-bg-contrast-mix 0%, @body-bg 50%); /* FF3.6+ */
      background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,@body-bg-contrast-mix), color-stop(50%,@body-bg)); /* Chrome,Safari4+ */
      background: -webkit-linear-gradient(top,  @body-bg-contrast-mix 0%, @body-bg 50%); /* Chrome10+,Safari5.1+ */
      background: -o-linear-gradient(top,  @body-bg-contrast-mix 0%, @body-bg 50%); /* Opera 11.10+ */
      background: -ms-linear-gradient(top,  @body-bg-contrast-mix 0%, @body-bg 50%); /* IE10+ */
      background: linear-gradient(to bottom,  @body-bg-contrast-mix 0%, @body-bg 50%); /* W3C */
      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='@body-bg', endColorstr='@body-bg-contrast-mix',GradientType=0 ); /* IE6-9 */
   }

// LOGIN WIDGET
/*form div.bbp-username,
form div.bbp-password,
form div.bbp-remember-me,
form div.bbp-submit-wrapper {
   .form-group;
}

form div.bbp-username input,
form div.bbp-password input{
   .form-control;
}

form div.bbp-remember-me {
   .checkbox;
}

form div.bbp-submit-wrapper button {
   .btn;
   .btn-default;
   .btn-block;
} */

/* ==========================================================================
   Login / Register / Lost Password page
   ========================================================================== */

/*// LOGIN FORM
.serverus-login-title {
   border-bottom: 1px dotted @brand-primary;
   //padding: 2em;

   color: @brand-complement-text-contrast;
   background-color: @brand-complement;

   font-size: @font-size-widget-large;
   line-height: @line-height-widget-title;
   
   font-family: @headings-font-family;
   font-weight: @font-weight-heavier;

   padding: @padding-large-vertical @padding-large-horizontal;

}

.serverus-login-wrapper,
.serverus-registration-wrapper {
   overflow: hidden;
   .box-shadow( 0 0 6px 1px @brand-complement );  
   border: @border-stack; 
   border-radius: 12px;
}

.serverus-login-inner, 
.serverus-registration-inner {
   padding: @padding-large-vertical @padding-large-horizontal;
}

.bbp-login-form .bbp-remember-me {
   padding-left: 25px;
}

.serverus-show-lost-pass {
   padding: @padding-base-vertical @padding-large-horizontal;
   background-color: @body-bg-contrast-mix;
}

.serverus-lost-pass-form {
   margin-top: 0;
   padding: 1px 2em 2em 2em;
   background-color: @body-bg-contrast-mix;
}

.bbp-lost-pass-btn {
   display: block;
}*/

// Default Login page overrides
body.login {
   background-color: @back-bg;
}

body.login div#login {}
body.login div#login h1 {}
body.login div#login h1 a {}
/* ... */

